--- a/name.tex
+++ b/name.tex
@@ -368,62 +368,59 @@ Stem-Plural-1sgPoss-Ablative\\
 \end{figure}
 
 
-%
-% 
-% \begin{figure}
-%     Valence:
-%\begin{tabular}{lllll}
-%	a) & {\c c}{\i}ld{\i}r-{\i}r-{\i}m \\
-%& go.crazy-Causative-aorist-1sg \\
-%& `I go crazy' (Turkish)\\
-%b) & {\c c}{\i}ld{\i}r-t-{\i}r-{\i}m \\
-%& go.crazy-Causative-aorist-1sg \\
-%& `I make (someone) go crazy' (Turkish) \\
-%\end{tabular}     
-%Voice:
-%\begin{tabular}{llllll}
-%a) & mi-mash-yoo \\
-%& see-politeness-future \\
-%& `will see' (Japanese) \\
-%b) & mi-rare-mash-yoo \\
-%& see-passive-politeness-future \\
-%&`will be seen' (Japanese)
-%\end{tabular}
-%
-%Mood:
-%\begin{tabular}{llll}
-%a) & ismer-nek \\
-%& know-3pl.def \\
-%& `they know' (Hungarian) \\
-%b) & ismer-het-nek \\
-%& know-potential-3pl.def \\
-%& `they can know' (Hungarian)
-%\end{tabular}
-%Tense:
-%\begin{tabular}{llllll}
-%a) & isseo-yo \\ 
-%& be-polite \\
-%& `is/are' (informal polite, Korean) \\ 
-%b) & isseo-sseo-yo \\
-% & be-past-polite \\
-% & `was/were' (informal, polite, Korean)
-% \end{tabular}
-% Agreement:
-%\begin{tabular}{lllll}
-%a) & a{\c c}ar-{\i}m \\
-%b)& a{\c c}ar-s{\i}n \\
-%c) & a{\c c}ar-{\i}z \\
-%d) &a{\c c}ar-s{\i}n{\i}z \\
-%& stem-person \\
-%& `I/you (sgd)/we/you (pl) open'
-%\end{tabular}
-%
-%\mhahn{TODO make this a nice illustration of verb inflection appropriate for the audience}
-%
-%\caption{Examples of verb inflection}
-%     \label{tab:examples-verbs}
-% \end{figure}
-% 
+
+ \begin{figure}
+     Valence:
+\begin{tabular}{lllll}
+	a) & {\c c}{\i}ld{\i}r-{\i}r-{\i}m \\
+& go.crazy-Causative-aorist-1sg \\
+& `I go crazy' (Turkish)\\
+b) & {\c c}{\i}ld{\i}r-t-{\i}r-{\i}m \\
+& go.crazy-Causative-aorist-1sg \\
+& `I make (someone) go crazy' (Turkish) \\
+\end{tabular}     
+Voice:
+\begin{tabular}{llllll}
+a) & mi-mash-yoo \\
+& see-politeness-future \\
+& `will see' (Japanese) \\
+b) & mi-rare-mash-yoo \\
+& see-passive-politeness-future \\
+&`will be seen' (Japanese)
+\end{tabular}
+
+Mood:
+\begin{tabular}{llll}
+a) & ismer-nek \\
+& know-3pl.def \\
+& `they know' (Hungarian) \\
+b) & ismer-het-nek \\
+& know-potential-3pl.def \\
+& `they can know' (Hungarian)
+\end{tabular}
+Tense:
+\begin{tabular}{llllll}
+a) & isseo-yo \\ 
+& be-polite \\
+& `is/are' (informal polite, Korean) \\ 
+b) & isseo-sseo-yo \\
+ & be-past-polite \\
+ & `was/were' (informal, polite, Korean)
+ \end{tabular}
+ Agreement:
+\begin{tabular}{lllll}
+a) & a{\c c}ar-{\i}m \\
+b)& a{\c c}ar-s{\i}n \\
+c) & a{\c c}ar-{\i}z \\
+d) &a{\c c}ar-s{\i}n{\i}z \\
+& stem-person \\
+& `I/you (sgd)/we/you (pl) open'
+\end{tabular}
+
+\mhahn{TODO make this a nice illustration of verb inflection appropriate for the audience}
+\caption{Examples of verb inflection}\label{tab:examples-verbs}
+\end{figure}
+ 
 
 \begin{figure}
 
